attempt (need to fix) at wrapping home page in bg image, updates to styling and display

--- a/style/style.css
+++ b/style/style.css
@@ -30,7 +30,7 @@ body {
   height: 100%;
 }*/
 
-.home {
+.bg {
   width: 100%;
   height: 100%;
   background: url('../src/images/cover.jpg') no-repeat center;
